--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nProj",
+  "name": "newProject",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -11,8 +11,6 @@
   "author": "José Lucas <josluc2016@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "consign": "^0.1.6",
-    "express": "^4.17.1",
-    "express-handlebars": "^5.2.0"
+    "express": "^4.17.1"
   }
 }
